feat: add update/password endpoint
