# src/routes/auth.route.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 import AuthController from '@controllers/auth.controller';
-import { CreateUserDto, UserSignInDto } from '@dtos/users.dto';
+import { CreateUserDto, UpdatePasswordDto, UserSignInDto } from '@dtos/users.dto';
 import { Routes } from '@interfaces/routes.interface';
 import authMiddleware from '@middlewares/auth.middleware';
 import validationMiddleware from '@middlewares/validation.middleware';
@@ -19,6 +19,11 @@ class AuthRoute implements Routes {
       `${this.path}/sign-up`,
       validationMiddleware(CreateUserDto, 'body'),
       this.authController.signUp,
+    );
+    this.router.put(
+      `${this.path}/password/:id`,
+      validationMiddleware(UpdatePasswordDto, 'body'),
+      this.authController.updatePassword,
     );
     this.router.post(
       `${this.path}/sign-in`,
